syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.jal.crawler.proto.resolve";

import "common_config.proto";
import "common_component.proto";



package grpc;

service RpcResolveConfig {
    rpc resolveConfig (ResolveConfig) returns (ConfigStatus);
    rpc resolveConfigShow (ComponentStatus) returns (ResolveConfig);
}

service RpcResolveConfigShow {

}

message ResolveConfig {
    int32 thread = 1;
    enum Persist {
        MONGO = 0;
        CONSOLE = 1;
    }
    Persist persist = 2;
    MongoConfig mongo_config = 3;
    RedisConfig redis_config = 4;

    string self_host=7;
    int32 self_port=8;
    Status self_status=9;
    Status leader_status=10;
    string leader_host=11;
    int32 leader_port=12;

    int32 relation_type=15;


}

